<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login"
    tools:context=".signup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page2"
                android:id="@+id/logintext"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:layout_marginBottom="10dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="24dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/firstname"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="8dp"
                        android:hint="@string/String_first"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:layout_marginTop="40dp" />

                    <EditText
                        android:id="@+id/middlename"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="8dp"
                        android:hint="@string/String_middle"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/lastname"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="8dp"
                        android:hint="@string/String_last"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/email"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="8dp"
                        android:hint="@string/String_email"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/mobile"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/mobile"
                        android:drawablePadding="8dp"
                        android:inputType="phone"
                        android:hint="@string/String_mobile"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:layout_marginTop="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/address"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/address"
                        android:drawablePadding="8dp"
                        android:hint="Address"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background"
                        android:layout_marginTop="20dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/password2"
                            android:background="@drawable/custom_edittext"
                            android:drawableStart="@drawable/lock"
                            android:drawablePadding="8dp"
                            android:hint="@string/string_pwd"
                            android:padding="8dp"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/password3"
                            android:background="@drawable/custom_edittext"
                            android:drawableStart="@drawable/lock"
                            android:drawablePadding="8dp"
                            android:hint="@string/String_cpwd"
                            android:padding="8dp"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/cardview_dark_background" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </ScrollView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/signupbtn"
                android:text="@string/btn_signup"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:text="@string/string_AlreadyAccount"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="14sp" />

</LinearLayout>